--- a/src/main/webapp/css/implant/ondayImplants.css
+++ b/src/main/webapp/css/implant/ondayImplants.css
@@ -685,6 +685,11 @@ section.board-link {
 }
 
 @media screen and (max-width: 640px) {
+
+    .section03 .max-layout-width .text > div {
+    padding-right: 0px;
+    position: relative;
+}
     .section05 {
     padding-bottom: 37px;
     background: url(../../images/sub/implant/oneday/oneday_bg2.jpg);
@@ -834,7 +839,7 @@ section.board-link {
 @media screen and (max-width: 414px) {
     section.section-quotes-title-right .bg {
     bottom: -38px;
-    height: 220px;
+    height: 180px;
 }
 
     section.img-four p {margin-bottom: 31px;line-height: 1.4;}
