--- a/src/main/webapp/css/tooth/general.css
+++ b/src/main/webapp/css/tooth/general.css
@@ -38,7 +38,7 @@
 }
 
 .section01 .section-text {
-    line-height: 1.6;
+    line-height: 1.5;
 }
 
 .section01 .section-text:first-child {
@@ -859,18 +859,22 @@
 
 .tab-container1 .left-fade-slider-container .img01 {
     background: url(../../images/sub/tooth/general/decay13.jpg) no-repeat center;
+    background-size: cover;
 }
 
 .tab-container1 .left-fade-slider-container .img02 {
     background: url(../../images/sub/tooth/general/decay14.jpg) no-repeat center;
+    background-size: cover;
 }
 
 .tab-container1 .left-fade-slider-container .img03 {
     background: url(../../images/sub/tooth/general/decay15.jpg) no-repeat center;
+    background-size: cover;
 }
 
 .tab-container1 .left-fade-slider-container .img04 {
     background: url(../../images/sub/tooth/general/decay16.jpg) no-repeat center;
+    background-size: cover;
 }
 
 .tab-container3 .left-fade-slider-container .img01 {
@@ -913,7 +917,7 @@
     word-break: keep-all;
     letter-spacing: -1px;
     font-weight: 400;
-    line-height: 1.6;
+    line-height: 1.5;
 }
 
 .fade-in-slider .swiper-slide .text h2 {
@@ -1067,10 +1071,83 @@ section.board-link {
     .section03 {
         padding: 0 30px;
         box-sizing: border-box;
+        margin-top: 55px;
     }
 }
 
 @media screen and (max-width: 640px) {
+    section.board-link {
+    margin-top: 50px;
+}
+    .fade-in-slider .title p {
+    font-size: 14px;
+    color: #9c9c9c;
+    letter-spacing: -1px;
+    margin-bottom: 29px;
+    font-weight: 400;
+    line-height: 1.5;
+    padding-top: 4px;
+}
+    body .left-fade-slider-container .slider-container {
+    height: 404px;
+}
+
+    .section05 .text {
+    padding-top: 45px;
+    position: relative;
+    box-sizing: border-box;
+}
+    .section05 {
+    margin-top:80px;
+    margin-bottom: -69px;
+}
+    .section04 {
+    margin-top: 28px;
+}
+    .section02 {
+    text-align: center;
+    margin-top: 120px;
+}
+    .section02-1 {
+    position: relative;
+    padding-bottom: 50px;
+}
+    .section02-1 .tab-contents img + div p {
+    font-size:14px;
+    text-align: left;
+    line-height: 1.6;
+    word-break: keep-all;
+    letter-spacing: -1.2px;
+}
+    .section02-1 .tab-contents img + div h2 {
+    font-size: 28px;
+    font-weight: 500;
+    text-align: left;
+    margin-bottom: 22px;
+    letter-spacing: -2px;
+    margin-top:-20px;
+}
+    .section02-1 .tab-contents {
+    padding-top: 50px;
+}
+    .section02 .tab li {
+    width: 33.103333333%;
+    margin-left: 0.23%;
+    float: left;
+    font-size: 15px;
+    color: #a8a8a8;
+    background: #dfdfdf;
+    padding: 13px 0;
+    cursor: pointer;
+    letter-spacing: -1.5px;
+}
+    section.section-top-title-left .bg {
+    padding-bottom: 0;
+    height: 341px;
+}
+    .section-text {
+    font-size: 14px;
+}
     .tab-container1 .section20 .bg {
         background-attachment: initial;
         background-size: cover;
@@ -1124,26 +1201,33 @@ section.board-link {
     }
     .fade-in-slider .slick-arrow {
         background-color: #f5f5f5;
+        bottom: 64px;
     }
     .fade-in-slider .scroll-bar {
         top: 515px;
     }
     .fade-in-slider {
-        margin-top: 0px;
+        margin-top: -30px;
+        padding-bottom: 2px;
     }
     .fade-in-slider {
         background: none;
     }
     .section20 .max-layout-width .text h2 {
-        padding: 0 30px;
+        padding: 0px 30px;
         box-sizing: border-box;
         word-break: keep-all;
+        font-size: 22px;
+        line-height: 1.3;
+        margin-top: -25px;
     }
     .section20 .max-layout-width .text h2 br {
         display: none;
     }
     .section20 {
         padding-bottom: 30px;
+        margin-top: 55px;
+        height: 259px;
     }
     .section05 .text h2 + p {
         padding-right: 30px;
@@ -1163,6 +1247,8 @@ section.board-link {
     }
     .section05 .text h2 {
         padding-top: 0px;
+        font-size: 28px;
+        margin-bottom: 21px;
     }
     .section05 .text h2:before {
         display: none;
@@ -1182,6 +1268,8 @@ section.board-link {
     }
     .section03 .table .table-title th {
         font-size: 16px;
+        padding: 12px 0;
+        height: 43px;
     }
     .section03 .table td:first-child {
         font-size: 16px;
@@ -1208,16 +1296,18 @@ section.board-link {
 
 @media screen and (max-width: 520px) {
     .section02 .section-title {
-        font-size: 32px;
+        font-size: 28px;
         word-break: keep-all;
         box-sizing: border-box;
     }
     .section02 .section-text {
-        margin-top: 20px;
+        margin-top: 14px;
         font-size: 14px;
         padding: 0 30px;
         word-break: keep-all;
         box-sizing: border-box;
+        line-height: 1.5;
+        margin-bottom: 33px;
     }
 }
 
@@ -1257,11 +1347,11 @@ section.board-link {
         height: 600px;
     }
     .fade-in-slider .scroll-bar {
-        top: 401px;
+        top: 357px;
     }
     .left-fade-slider-container {
         margin: 0;
-        padding-top: 70px;
+        padding-top: 59px;
     }
     .left-fade-slider-container {
         background: #f3f3f3;
@@ -1289,35 +1379,53 @@ section.board-link {
         padding-right: 30px;
     }
     section.section-quotes-title-right .bg {
-        height: 200px;
+        height: 168px;
     }
     section.section-quotes-title-right .max-layout-width .text {
-        padding-top: 190px;
+        padding-top: 271px;
     }
     section.section-quotes-title-right .image_box_right {
-        height: 140px;
+        height: 220px;
     }
 
     .tab-container1 .section04 .image_box_right .img,
     .tab-container2 .section04 .image_box_right .img,
     .tab-container3 .section04 .image_box_right .img {
-        background-size: contain;
+        background-size: cover;
     }
     .section03 h2 {
         font-size: 28px;
+        margin-bottom: 25px;
     }
     .section02 .section-title {
-        font-size: 29pxz;
+        font-size: 28pxz;
     }
     section.section-top-title-left {
-        padding-bottom: 100px;
+        padding-bottom: 42px;
     }
     section.section-top-title-left .image_box_left {
-        height: 163px;
+        height: 227px;
     }
 }
 
 @media screen and (max-width: 375px) {
+    .fade-in-slider .slick-arrow {
+    background-color: #f5f5f5;
+    bottom: 50px;
+}
+    .section20 .max-layout-width .text h2 {
+    padding: 0px 30px;
+    box-sizing: border-box;
+    word-break: keep-all;
+    font-size: 19px;
+    line-height: 1.3;
+    margin-top: -25px;
+}
+    .section20 {
+    padding-bottom: 30px;
+    margin-top: 55px;
+    height: 210px;
+}
     .section06 .max-layout-width .text h2 {
         padding-top: 0px;
     }
@@ -1347,10 +1455,10 @@ section.board-link {
         height: 540px;
     }
     .fade-in-slider .scroll-bar {
-        top: 401px;
+        top: 329px;
     }
     .section20 .max-layout-width .text {
-        padding-top: 70px;
+        padding-top: 93px;
     }
     .section05 .text h2 {
         font-size: 27px;
@@ -1359,23 +1467,26 @@ section.board-link {
         height: 200px;
     }
     section.section-quotes-title-right .max-layout-width .text {
-        padding-top: 180px;
+        padding-top: 267px;
     }
     section.section-quotes-title-right .image_box_right {
-        height: 129px;
+        height: 220px;
     }
     .section02 .section-title {
         font-size: 28px;
     }
     section.section-top-title-left {
-        padding-bottom: 70px;
+        padding-bottom: 84px;
     }
     section.section-top-title-left .image_box_left {
-        height: 150px;
+        height: 225px;
     }
 }
 
 @media screen and (max-width: 360px) {
+    .section20 .max-layout-width .text {
+    padding-top: 80px;
+}
     .tab-container3 section.section-quotes-title-right .bg {
         height: 238px;
     }
@@ -1386,16 +1497,17 @@ section.board-link {
         height: 540px;
     }
     .fade-in-slider .scroll-bar {
-        top: 390px;
+        top: 321px;
     }
     section.section-quotes-title-right .bg {
-        height: 190px;
+        height: 171px;
+        bottom: -29px;
     }
     section.section-quotes-title-right .max-layout-width .text {
-        padding-top: 180px;
+        padding-top: 250px;
     }
     section.section-quotes-title-right .image_box_right {
-        height: 122px;
+        height: 200px;
     }
     .section02 .section-title {
         font-size: 27px;
@@ -1404,6 +1516,6 @@ section.board-link {
         padding-bottom: 80px;
     }
     section.section-top-title-left .image_box_left {
-        height: 143px;
+        height: 225px;
     }
 }
