--- a/src/main/webapp/css/tooth/wisdom.css
+++ b/src/main/webapp/css/tooth/wisdom.css
@@ -30,7 +30,7 @@
 }
 
 .section01 .section-text {
-    line-height: 1.6;
+    line-height: 1.5;
     letter-spacing: -1.5px;
 }
 
@@ -121,7 +121,7 @@
 }
 
 .section03 .max-layout-width .text > div {
-    padding-right: 90px;
+    padding-right: 15px;
     position: relative;
 }
 
@@ -134,6 +134,7 @@
 
 .section03 .image_box_right .img {
     background: url(../../images/sub/tooth/wisdom/wisdom02.jpg) no-repeat center;
+    background-size: cover;
 }
 
 .section03 .section-title {
@@ -351,6 +352,24 @@ section.board-link {
 }
 
 @media screen and (max-width: 640px) {
+    section.board-link {
+    margin-top: 53px;
+}
+    body .left-fade-slider-container .slider-container {
+    height: 440px;
+}
+    .left-fade-slider-container .max-layout-width h2 {
+    font-size: 26px;
+    word-break: keep-all;
+    /* padding: 0 20px; */
+    box-sizing: border-box;
+    width: 330px;
+    margin: 0 auto;
+    padding-bottom:20px;
+}
+    .section03 {
+    margin-top: 50px;
+}
     .left-fade-slider-container {
         margin-top: 20px;
         background: #fff;
@@ -366,7 +385,7 @@ section.board-link {
         height: 202px;
     }
     .section03 .image_box_right .img {
-        background-size: contain;
+        background-size: cover;
     }
     .section02 ul {
         padding: 0 30px;
@@ -374,20 +393,25 @@ section.board-link {
     }
     .section02 li {
         width: 48%;
-        margin-bottom: 20px;
+        margin-bottom: 8px;
         padding: 20px 0;
     }
 }
 
 @media screen and (max-width: 414px) {
+    section.section-top-title-left .image_box_left {
+    height: 220px;
+    bottom: -42px;
+}
     section.section-quotes-title-right .bg {
-        height: 201px;
+        height: 153px;
+        bottom: -32px;
     }
     section.section-quotes-title-right .max-layout-width .text {
-        padding-top: 150px;
+        padding-top: 233px;
     }
     section.section-quotes-title-right .image_box_right {
-        height: 130px;
+        height: 220px;
     }
     .section02 li p {
         font-size: 14px;
@@ -397,10 +421,12 @@ section.board-link {
         background-size: contain;
     }
     .section02 .section-title {
-        font-size: 30px;
+        font-size: 28px;
+        margin-bottom: 29px;
+        margin-top: -9px;
     }
     body .section-top-title-left .section-title {
-        font-size: 30px;
+        font-size: 28px;
     }
     section.section-top-title-left {
         padding-bottom: 0px;
@@ -408,20 +434,31 @@ section.board-link {
 }
 
 @media screen and (max-width: 375px) {
+    body .left-fade-slider-container .slider-container {
+    height: 420px;
+}
+    .section02 {
+    text-align: center;
+    padding-top: 130px;
+}
+    section.section-top-title-left .image_box_left {
+    height: 220px;
+    bottom: -65px;
+}
     section.section-quotes-title-right .bg {
-        height: 201px;
+        height: 178px;
     }
     section.section-quotes-title-right .max-layout-width .text {
-        padding-top: 140px;
+        padding-top: 238px;
     }
     section.section-quotes-title-right .image_box_right {
-        height: 119px;
+        height: 220px;
     }
     .section02 li p {
         font-size: 13px;
     }
     body .section-top-title-left .section-title {
-        font-size: 30px;
+        font-size: 28px;
     }
     section.section-top-title-left {
         padding-bottom: 20px;
@@ -429,17 +466,20 @@ section.board-link {
 }
 
 @media screen and (max-width: 360px) {
+    body .left-fade-slider-container .slider-container {
+    height: 391px;
+}
     section.section-quotes-title-right .bg {
-        height: 213px;
+        height: 176px;
     }
     section.section-quotes-title-right .max-layout-width .text {
-        padding-top: 130px;
+        padding-top: 231px;
     }
     section.section-quotes-title-right .image_box_right {
-        height: 112px;
+        height: 220px;
     }
     body .section-top-title-left .section-title {
-        font-size: 30px;
+        font-size: 28px;
     }
     section.section-top-title-left {
         padding-bottom: 20px;
