--- a/src/main/webapp/css/tooth/scaling.css
+++ b/src/main/webapp/css/tooth/scaling.css
@@ -544,7 +544,7 @@
 }
 
 .text-slider .slick-slide .text h2 {
-    font-size: 31px;
+    font-size: 32px;
     line-height: 1.25;
     margin-bottom: 55px;
     color: #222;
@@ -557,6 +557,56 @@
 
 
 @media screen and (max-width: 640px) {
+
+    .text-slider .section-title {
+    font-size: 28px;
+}
+    .text-slider .section-text {
+    font-size: 14px;
+    line-height:1.5;
+    margin-top:15px;
+    margin-bottom: 32px;
+}
+
+    section.text-slider .slick-slide .text p {
+   font-size:14px;
+   line-height:1.5;
+  padding-top:10px;
+  }
+
+    .text-slider .slick-slide .text h2 {
+    font-size: 25px;
+    line-height: 1.25;
+    margin-bottom: 42px;
+    color: #222;
+    letter-spacing: -1.5px;
+    padding-top: 15px;
+}
+    .text-slider .slick-slide .text h3 {
+    font-size: 50px;
+    font-weight: bold;
+    color: #e4e4e4;
+    margin-bottom: -3px;
+    font-family: gmarket !important;
+}
+    .section04 .pager {
+    font-size: 16px;
+    color: #222;
+    padding: 6px 0;
+    position: relative;
+    padding-left: 40px;
+    display: inline-block;
+    font-weight: 500;
+    /* cursor: pointer; */
+    letter-spacing: -1px;
+}
+    .section03 .max-layout-width .text > div {
+    padding-right: 0px;
+    position: relative;
+}
+    section.section-top-title-left .image_box_left {
+    height: 200px;
+    }
     .section05 .bg {
         background-attachment: initial;
         background-size: cover;
@@ -571,7 +621,7 @@
         margin-top: 80px;
     }
     .section06 {
-        padding-bottom: 80px;
+        padding-bottom: 55px;
     }
     section.section06.list-content .section-text + .pager {
         margin-top: 0;
@@ -595,10 +645,11 @@
         padding-top: 90px;
     }
     .section05 {
-        margin-top: 100px;
+        margin-top: 52px;
+        height: 329px;
     }
     section.list-content {
-        margin-top: 0;
+        margin-top: -12px;
     }
     .section04 .bg {
         background: none;
@@ -616,7 +667,7 @@
         height: 270px;
     }
     .section04 .img {
-        background-size: contain;
+        background-size: cover;
     }
     .section04 .text > div {
         padding-left: 0;
@@ -636,7 +687,7 @@
         height: 202px;
     }
     .section03 .image_box_right .img {
-        background-size: contain;
+        background-size: cover;
     }
     .section02 ul {
         padding: 0 30px;
@@ -644,44 +695,49 @@
     }
     .section02 li {
         width: 48%;
-        margin-bottom: 20px;
+        margin-bottom: 8px;
         padding: 20px 0;
     }
 }
 
 @media screen and (max-width: 414px) {
+    .text-slider .slider-arrow-container {
+    bottom: 326px;
+}
     section.section06.list-content .section-title {
-        margin-top: 260px;
+        margin-top: 231px;
     }
     .section06 .img {
         background-size: contain;
+        margin-top: -24px;
     }
     .section05 .max-layout-width .text {
-        padding-top: 110px;
+        padding-top: 74px;
     }
     .section05 .max-layout-width .text p {
         font-size: 14px;
     }
     .section05 .max-layout-width .text h2 {
-        font-size: 28px;
+        font-size: 27px;
         padding: 0 30px;
         box-sizing: border-box;
     }
     section.list-content .section-title {
-        margin-bottom: 260px;
+        margin-bottom: 254px;
     }
     section.section04 .image_box_left {
         top: 80px;
         height: 200px;
     }
     section.section-quotes-title-right .bg {
-        height: 221px;
+        height: 170px;
     }
     section.section-quotes-title-right .max-layout-width .text {
-        padding-top: 150px;
+        padding-top: 162px;
     }
     section.section-quotes-title-right .image_box_right {
-        height: 130px;
+        height: 220px;
+        top: -76px;
     }
     .section02 li p {
         font-size: 14px;
@@ -691,10 +747,11 @@
         background-size: contain;
     }
     .section02 .section-title {
-        font-size: 30px;
+        font-size: 28px;
+        margin-bottom: 29px;
     }
     body .section-top-title-left .section-title {
-        font-size: 30px;
+        font-size: 28px;
     }
     section.section-top-title-left {
         padding-bottom: 0px;
@@ -702,8 +759,25 @@
 }
 
 @media screen and (max-width: 375px) {
+    .text-slider .slider-arrow-container {
+    bottom: 326px;
+}
+    .section07 {
+    margin-top: 52px;
+}
+    .section06 {
+    padding-bottom: 50px;
+}
+    .section06 .img {
+    background-size: contain;
+    margin-top: -45px;
+}
+    .section05 {
+    margin-top: 52px;
+    height: 310px;
+}
     section.section06.list-content .section-title {
-        margin-top: 240px;
+        margin-top: 203px;
     }
     .section05 .max-layout-width .text h2 {
         font-size: 26px;
@@ -719,19 +793,19 @@
         height: 180px;
     }
     section.section-quotes-title-right .bg {
-        height: 221px;
+        height: 207px;
     }
     section.section-quotes-title-right .max-layout-width .text {
-        padding-top: 140px;
+        padding-top: 169px;
     }
     section.section-quotes-title-right .image_box_right {
-        height: 119px;
+        height: 225px;
     }
     .section02 li p {
         font-size: 13px;
     }
     body .section-top-title-left .section-title {
-        font-size: 30px;
+        font-size: 28px;
     }
     section.section-top-title-left {
         padding-bottom: 20px;
@@ -739,17 +813,28 @@
 }
 
 @media screen and (max-width: 360px) {
+    .section05 {
+    margin-top: 52px;
+    height: 340px;
+}
+    section.section-quotes-title-right .section-title {
+    padding-left: 50px;
+    font-size: 28px;
+    word-break: keep-all;
+    padding-right: 20px;
+}
     section.section06.list-content .section-title {
-        margin-top: 240px;
+        margin-top: 192px;
     }
     .section05 .max-layout-width .text {
-        padding-top: 120px;
+        padding-top: 80px;
     }
     .section05 .max-layout-width .text h2 {
         font-size: 25px;
     }
     .section05 .max-layout-width .text p {
-        font-size: 12px;
+        font-size: 14px;
+        padding: 0 30;
     }
     section.list-content .section-title {
         margin-bottom: 240px;
@@ -759,16 +844,17 @@
         height: 180px;
     }
     section.section-quotes-title-right .bg {
-        height: 233px;
+        height: 195px;
+        bottom: -29px;
     }
     section.section-quotes-title-right .max-layout-width .text {
-        padding-top: 130px;
+        padding-top: 159px;
     }
     section.section-quotes-title-right .image_box_right {
-        height: 112px;
+        height: 220px;
     }
     body .section-top-title-left .section-title {
-        font-size: 30px;
+        font-size: 28px;
     }
     section.section-top-title-left {
         padding-bottom: 20px;
